# IbexEngine

./: CMakeLists.txt  root.json
Dependencies/zlib/: libz.so.1.3.1
res/: Combine1.mtl  Crate-01-01.mtl  Crate.mtl  Pebble_Sphere.mtl  cube.mtl  fragment.glsl  fragment_illum.glsl  fragment_mesh.glsl  geometry_illum.glsl  root.json  vertex.glsl  vertex_cube.glsl  vertex_illum.glsl  vertex_mesh.glsl
res/Materials/: Crate-01-01.mtl  Crate.mtl  Pebble_Sphere.mtl  cube.mtl  disp.mtl  shareModel.mtl
res/Shaders/Shader_Billboard/: fragment.glsl  fragment_billboard.glsl  geometry.glsl  geometry_billboard.glsl  vertex.glsl
res/Shaders/Shader_Cube/: fragment_cube.glsl  vertex.glsl  vertex_cube.glsl
res/Shaders/Shader_Depth/: fragment.glsl  vertex.glsl
res/Shaders/Shader_Displacement/: fragment.glsl  fragment_displacement.glsl  geometry.glsl  geometry_displacement.glsl  vertex.glsl
res/Shaders/Shader_Illum/: fragment_illum.glsl  geometry.glsl  geometry_illum.glsl  vertex.glsl
res/Shaders/Shader_Normal/: geometry.glsl  vertex.glsl  vertex_normal.glsl
res/Shaders/Shader_Particle/: fragment_particle.glsl  vertex.glsl  vertex_particle.glsl
res/blenderformat/: Combine1.mtl  cube.mtl
res/blenderformat/export/: Combine2.mtl
src/: App.cpp  Clock.h  EventClock.h  splitString.h
src/Engine/: BillboardNode.cpp  BillboardNode.h  Camera.cpp  Camera.h  GLMJsonfwd.h  InputHandler.cpp  InputHandler.h  LightNode.cpp  LightNode.h  Mesh.h  MeshObject.cpp  MeshObject.h  Node.cpp  Node.h  NodeOLD.cpp  Scene.cpp  Scene.h  SceneGraph.cpp  SceneGraph.h  SkyboxNode.cpp  SkyboxNode.h  Transform.cpp  Transform.h
src/Engine/Editor/: Inspector.h
src/Engine/FSM/: PlayerMachine.cpp  PlayerMachine.h
src/GLAD/: glad.c  glad.h
src/Graphics/: CubemapObject.cpp  CubemapObject.h  FramebufferObject.cpp  FramebufferObject.h  GL.h  GLDebug.h  LightCaster.cpp  LightCaster.h  MeshObject.cpp  MeshObject.h  ParticleObject.cpp  ParticleObject.h  RenderObject.cpp  RenderObject.h  Renderer.cpp  Renderer.h  ShaderObject.cpp  ShaderObject.h  ShadowMap.cpp  ShadowMap.h  TextureArrayObject.cpp  TextureArrayObject.h  TextureObject.cpp  TextureObject.h  UniformBufferObject.cpp  UniformBufferObject.h
src/Graphics/InputManager/: InputManager.cpp  InputManager.h
src/ResourceManager/: Material.h  MaterialLibrary.cpp  MaterialLibrary.h  MeshData.cpp  MeshData.h  ResourceManager.cpp  ResourceManager.h  ShaderData.cpp  ShaderData.h  ShaderProgram.cpp  ShaderProgram.h  TextureData.cpp  TextureData.h
src/ResourceManager/AssetPack/: AssetPack.cpp  AssetPack.h
